Try to fix spacing

--- a/styles/unmin/dark-classic-unmin.css
+++ b/styles/unmin/dark-classic-unmin.css
@@ -93,6 +93,7 @@ nav ul {
 }
 nav ul li a {
     padding: 10px;
+    color: #fff;
     background-color: #2c2c2c;
 }
 .main-content {
@@ -322,8 +323,8 @@ a:hover {
 .legal-submenu li a:hover {
     background-color: #4a4a4a;
 }
-nav ul li:has(> .legal-submenu) {
-    margin-bottom: 15px;
+#legal-info-tab {
+    margin-top: 10px;
 }
 a {
     color: #00b894;
